--- a/ch2/src/main/resources/templates/react.mustache
+++ b/ch2/src/main/resources/templates/react.mustache
@@ -6,4 +6,4 @@
 </p>
 
 <div id="app"></div>
-<script type="module" src="index.js" data-videos="data"></script>
+<script type="module" src="index.js"></script>
